--- a/ESP-OpenBCI/Mac_OS_X/README
+++ b/ESP-OpenBCI/Mac_OS_X/README
@@ -2,3 +2,4 @@ Wed Mar  1 12:05:10 MST 2006
 We forgot to update the Mac OS X binary.  Previously, it was an old version
 (RXTX-2.1-7pre20).  This has now been corrected.
 
+binary from http://blog.iharder.net/2009/08/18/rxtx-java-6-and-librxtxserial-jnilib-on-intel-mac-os-x
